# rust-sentence-embeddings

./: Cargo.toml  README.md  build.rs  dockerfile  justfile
examples/: generate_embeddings.rs  grpc_client.rs  grpc_client_batch.rs  http_client.rs  http_client_batch.rs
examples/data/: batch_examples.txt
examples/utils/: mod.rs
proto/: embedding_service.proto
src/: embedding_service.rs  error.rs  grpc_handlers.rs  http_handlers.rs  lib.rs  main.rs  models.rs
src/server/: grpc_handlers.rs  http_handlers.rs  mod.rs
