[package]
name = "embedding-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle-core = { version = "0.5", features = ["metal"] }
candle-nn = "0.5"
candle-transformers = "0.5"
hf-hub = { version = "0.3", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"

axum = "0.7"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
