[package]
name = "embedding-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
# ML libraries
candle-core = { version = "0.5", features = ["metal"] }
candle-nn = "0.5"
candle-transformers = "0.5"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.19"
# Web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
# CLI
clap = { version = "4.5.7", features = ["derive"] }


[build-dependencies]
tonic-build = "0.11"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
