[package]
name = "embedding-microservice"
version = "0.1.0"
edition = "2021"

[lints.clippy]
clone_on_ref_ptr = "warn"

[features]
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]


[dependencies]
# General
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# candle-*** = "0.6.0" does not work with metal Metal(Message("no metal implementation for layer-norm")) despite the fact it works with 0.5.1
candle-core = "0.5"
candle-nn = "0.5"
candle-transformers = "0.5"
hf-hub = "0.3"
tokenizers = "0.19"
# Web
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
# CLI
clap = { version = "4.5.7", features = ["derive"] }
# Errors
derive_more = "0.99.17"


[build-dependencies]
tonic-build = "0.12"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5"
